# Zotero-MCP-lite

./: .gitignore  .mcp.json  pyproject.toml  readme.md  windows_install_guide.md
src/zotero_mcp/: __main__.py  database.py  keynote.py  semantic_scholar.py  server.py
