[project]
name = "zotero-mcp-local"
version = "0.1.3"
description = "MCP Server for accessing and analyzing your local Zotero library with AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.24.0",
]

[project.scripts]
zotero-mcp-local = "zotero_mcp:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_mcp"]
